# remind_me_app_with_Vue_frontend

./: .gitignore  README.md  docker-compose.yml  init.sh  requirements.txt
backend/: .dockerignore  README.md  dev.sqlite3  dockerfile  pyproject.toml  requirements.txt
backend/app/: dev.sqlite3  main.py
backend/app/mock_data/: LLM_generate_summary.py  README.md  generate_S3_data.py  generate_insertion_data_from_S3.py  generate_postgresql_data.py  generate_sqlite3_LLM_summary.py  generate_sqlite3_data.py  generate_sqlite3_tables.py
backend/app/routers/: operation.py  user.py  utils.py
backend/app/services/: LLM_utils.py  config.py  congnito_auth.py  database.py  debug_info.py  jwks_utils.py  lambda_utils.py  local_inference.py  queue_manager.py  redis_utils.py  runpod_client.py  s3_utils.py  sagemaker_utils.py
backend/deploy/: remindme_backend.service
backend/test/: README.md  backend_image_processing.postman_collection.json
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: ChooseSingleImage.vue  JobStatusBanner.vue  Login.vue  MyProfile.vue  NavBar.vue  PasswordReset.vue  PromptDialog.vue  RemindeeCard.vue  SessionTimeoutDialog.vue  Signup.vue  TrainAIModel.vue  UploadRemindeeInfoBox.vue  VerifyEmail.vue
frontend/src/composables/: useCamera.ts  useNavigationGuard.ts  useSessionTimeout.ts  userImageConversion.ts
frontend/src/config/: cognitoConfig.ts  config.ts
frontend/src/layouts/: RootLayout.vue
nginx/: default.conf
(+22 files in other folders)
